# iclass_buaa_tui

./: .gitignore  BUAA  Cargo.toml  LICENSE  PKGBUILD  README.md  config.example.toml  iclass_tui_ref  rustfmt.toml  task.md
.github/workflows/: package.yml
src/: api.rs  app.rs  bykc.rs  cli.rs  constants.rs  logging.rs  main.rs  model.rs  ui.rs
src/bykc/: api.rs  helpers.rs  mod.rs  raw.rs  types.rs
src/cli/: args.rs  autologin.rs  config.rs  core.rs  mod.rs  planner.rs
src/iclass/: api.rs  mod.rs
tests/fixtures/: cas_bad_credentials.html  cas_login_with_captcha.html
