[package]
name = "iclass_buaa_tui"
version = "0.1.0"
edition = "2024"
license = "MIT"

[package.metadata.generate-rpm]


[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
qrcode = "0.14"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "form", "json", "query", "rustls"] }
scraper = "0.26"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tui-qrcode = "0.2.3"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

