[package]
name = "iclass_buaa_tui"
version = "0.1.0"
edition = "2024"
description = "BUAA class check TUI software"
homepage = "https://github.com/Yiki21/iclass_buaa_tui"
license = "MIT"

[package.metadata.generate-rpm]
summary = "BUAA class check-in TUI tool"
vendor = "Yiki21"
release = "1"
auto-req = "yes"

[[package.metadata.generate-rpm.assets]]
source = "target/release/iclass_buaa_tui"
dest = "/usr/bin/iclass_buaa_tui"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/licenses/iclass_buaa_tui/LICENSE"
mode = "644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/iclass_buaa_tui/README.md"
mode = "644"
doc = true

[package.metadata.deb]
maintainer = "Yiki21"
section = "utils"
priority = "optional"
revision = "1"
extended-description = """\
A terminal user interface tool for BUAA class check-in.

Features:
- QR code generation
- Terminal-based UI
- Async HTTP requests
"""
license-file = ["LICENSE", "0"]

assets = [
  # binary
  ["target/release/iclass_buaa_tui", "usr/bin/iclass_buaa_tui", "755"],

  # docs
  ["README.md", "usr/share/doc/iclass_buaa_tui/README.md", "644"],
  ["LICENSE", "usr/share/doc/iclass_buaa_tui/LICENSE", "644"],
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
qrcode = "0.14"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = [
  "cookies",
  "form",
  "json",
  "query",
  "rustls"
] }
scraper = "0.26"
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tui-qrcode = "0.2.3"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"
codegen-units = 1
