[package]
name = "iclass_buaa_tui"
version = "0.4.3"
edition = "2024"
description = "BUAA class check TUI software"
homepage = "https://github.com/Yiki21/iclass_buaa_tui"
license = "GPL-3"

# ----------------------
# For MacOS
# ---------------------
[package.metadata.packager]
product-name = "iClass BUAA TUI"
identifier = "io.github.yiki21.iclass-buaa-tui"
formats = ["dmg"]
out-dir = "target/packager"
binaries-dir = "target/release"
before-packaging-command = "cargo build --release --locked"
license-file = "LICENSE"
homepage = "https://github.com/Yiki21/iclass_buaa_tui"
description = "BUAA class check-in TUI tool"
long-description = """\
A terminal user interface tool for BUAA class check-in.

Features:
- QR code generation
- Terminal-based UI
- Async HTTP requests
"""

# ----------------------
# For RPM
# ---------------------
[package.metadata.generate-rpm]
summary = "BUAA class check-in TUI tool"
vendor = "Yiki21"
release = "1"
auto-req = "yes"

[[package.metadata.generate-rpm.assets]]
source = "target/release/iclass_buaa_tui"
dest = "/usr/bin/iclass_buaa_tui"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/licenses/iclass_buaa_tui/LICENSE"
mode = "644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/iclass_buaa_tui/README.md"
mode = "644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "config.example.toml"
dest = "/usr/share/doc/iclass_buaa_tui/config.example.toml"
mode = "644"
doc = true

# ----------------------
# For Deb
# ---------------------
[package.metadata.deb]
maintainer = "Yiki21"
section = "utils"
priority = "optional"
revision = "1"
extended-description = """\
A terminal user interface tool for BUAA class check-in.

Features:
- QR code generation
- Terminal-based UI
- Async HTTP requests
"""
license-file = ["LICENSE", "0"]

assets = [
  # binary
  ["target/release/iclass_buaa_tui", "usr/bin/iclass_buaa_tui", "755"],

  # docs
  ["README.md", "usr/share/doc/iclass_buaa_tui/README.md", "644"],
  ["LICENSE", "usr/share/doc/iclass_buaa_tui/LICENSE", "644"],
  ["config.example.toml", "usr/share/doc/iclass_buaa_tui/config.example.toml", "644"],
]

[dependencies]
aes = "0.9"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
ecb = { version = "0.2", features = ["alloc"] }
rand = "0.10"
qrcode = "0.14"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = [
  "cookies",
  "form",
  "json",
  "query",
  "rustls"
] }
rsa = { version = "0.9", features = ["pem"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
toml = "1.1"
tui-qrcode = "0.2.4"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "thin"
codegen-units = 1
